remove big files from extension package, make index dropdown more pretty, change highlighting color to darker green (still needs design work), fixed issue that on some pages the annotation content is not properly aligned.

--- a/src/common-ui/components/IndexDropdown.css
+++ b/src/common-ui/components/IndexDropdown.css
@@ -5,8 +5,7 @@
     composes: hoverColor from 'src/common-ui/colors.css';
     align-items: center;
     display: flex;
-    padding: 8px 10px 8px 10px;
-    margin: 0 10px;
+    padding: 8px 20px 8px 20px;
     cursor: pointer;
     border-bottom: 1px solid #e8e8e8;
     word-wrap: break-word;
