--- a/src/sidebar-overlay/ribbon/components/ribbon.css
+++ b/src/sidebar-overlay/ribbon/components/ribbon.css
@@ -49,7 +49,7 @@
     justify-content: center;
     box-shadow: none;
     background: white;
-    height: 100%;
+    height: 105vh;
     width: 34px;
     top: 0px;
 
@@ -294,14 +294,4 @@
 .cancel {
     background-image: url('/img/close.svg');
     background-size: 14px;
-}
-
-@media (max-height: 600px) {
-    .ribbon {
-        top: 5%;
-    }
-
-    .ribbonExpanded {
-        top: 5%;
-    }
 }
